JumpScript/tests/baselines/reference/asyncClass_es5.errors.txt
tests/cases/conformance/async/es5/asyncClass_es5.jump(1,1): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es5/asyncClass_es5.jump (1 errors) ====
    async class C {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }